--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,22 @@ body{
   }
 }
 
+.email {
+  border: 2px solid #c4c4c4;
+  border-radius: 10px;
+  padding: 0 15px;
+  height: 50px;
+  width: 100%;
+
+  input {
+    font-weight: bold;
+    border: 0;
+    padding: 13px;
+    font-size: 30px;
+    width: 200px;
+  }
+}
+
 .overlay {
   position: fixed;
   left: 0;
